2007-07-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When clamping the mask
	to clip mask, do not change the area to paint.

2007-06-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): Remove unused variables.

2007-06-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.5 ===

2007-06-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_cursor_position): Remove special
	active focus handling, only update 'shadow' for passive focus. Improves
	handling cursor separately from selection.

	* README
	* demos/treeview.gtkrc
	* demos/images/treeview-*: Updated
	
2007-05-31  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (check_child_position, check_buttonbox_child_position):
	use GTK_WIDGET_DRAWABLE instead of GTK_WIDGET_VISIBLE to check if a widget
	is currently visible in the screen.

2007-04-19  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.4 ===

2007-04-19  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-server.c (extract_pixmap_single): Revert the white
	background initialization as it adds unwanted tint to the graphics.
	Reopens MB#1216

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/Makefile.am
	* demos/gradient.c
	* demos/gradient.gtkrc
	* demos/images/gradient.png: Add testcase for gradient

	* src/sapwood-server.c (extract_pixmap_single): To avoid uninitialized
	pixels when loading images with alpha channel, paint the pixmap white
	first. MB#1216

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* demos/Makefile.am
	* demos/images/hbbox.png: remove ugly solid black image
	* demos/images/hbbox-*.png: use proper mask for the corners
	* demos/buttonbox.gtkrc: use the all-round image as fallback

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Add missing cast for