@@ -296,137 +296,6 @@ sapwood_pixmap_get_geometry (SapwoodPixmap *self,
   return TRUE;
 }
 
-static GdkGC *
-get_scratch_gc (GdkDrawable *drawable)
-{
-  static GdkGC *gc[32] = { 0, };
-  int           depth;
-
-  depth = gdk_drawable_get_depth (drawable);
-  if (!gc[depth])
-    {
-      GdkGCValues gc_values;
-
-      gc_values.fill = GDK_TILED;
-      gc[depth] = gdk_gc_new_with_values (drawable, &gc_values, GDK_GC_FILL);
-    }
-  return gc[depth];
-}
-
-/* Scale the rectangle (src_x, src_y, src_width, src_height)
- * onto the rectangle (dest_x, dest_y, dest_width, dest_height)
- * of the destination, clip by clip_rect and render
- */
-void
-sapwood_pixmap_render (SapwoodPixmap *self,
-		      GdkWindow    *window,
-		      GdkBitmap    *mask,
-		      GdkRectangle *clip_rect,
-		      gint          src_x,
-		      gint          src_y,
-		      gint          src_width,
-		      gint          src_height,
-		      gint          dest_x,
-		      gint          dest_y,
-		      gint          dest_width,
-		      gint          dest_height)
-{
-  GdkPixmap    *pixmap;
-  GdkBitmap    *pixmask;
-  int           i, j;
-  GdkRectangle  rect;
-  GdkBitmap    *tmp_mask;
-  int           mask_x, mask_y;
-  GdkGC        *tmp_gc;
-
-  if (dest_width <= 0 || dest_height <= 0)
-    return;
-
-  rect.x = dest_x;
-  rect.y = dest_y;
-  rect.width = dest_width;
-  rect.height = dest_height;
-
-  /* FIXME: Because we use the mask to shape windows, we don't use
-   * clip_rect to clip what we draw to the mask, only to clip
-   * what we actually draw. But this leads to the horrible ineffiency
-   * of scale the whole image to get a little bit of it.
-   */
-  if (!mask && clip_rect)
-    {
-      if (!gdk_rectangle_intersect (clip_rect, &rect, &rect))
-	return;
-    }
-
-  if (src_y == 0 && src_height == self->height)
-    i = 1;
-  else if (src_y == self->border_top)
-    i = 1;
-  else if (src_y == 0)
-    i = 0;
-  else
-    i = 2;
-
-  if (src_x == 0 && src_width == self->width)
-    j = 1;
-  else if (src_x == self->border_left)
-    j = 1;
-  else if (src_x == 0)
-    j = 0;
-  else
-    j = 2;
-
-  pixmap  = self->pixmap[i][j];
-  pixmask = self->pixmask[i][j];
-
-  /* if we don't have the pixmap it's an error in gtkrc and the pixmap server
-   * has already complained about it, no need to flood the console
-   */
-  if (!pixmap)
-    return;
-
-  if (mask)
-    {
-      tmp_mask = mask;
-      mask_x = dest_x;
-      mask_y = dest_y;
-    }
-  else
-    {
-      tmp_mask = gdk_pixmap_new (NULL, dest_width, dest_height, 1);
-      mask_x = 0;
-      mask_y = 0;
-    }
-
-  /* tile mask */
-  tmp_gc = get_scratch_gc (tmp_mask);
-  if (pixmask)
-    {
-      gdk_gc_set_fill (tmp_gc, GDK_TILED);
-      gdk_gc_set_ts_origin (tmp_gc, mask_x, mask_y);
-      gdk_gc_set_tile (tmp_gc, pixmask);
-      gdk_draw_rectangle (tmp_mask, tmp_gc, TRUE, mask_x, mask_y, dest_width, dest_height);
-    }
-  else
-    {
-      GdkColor tmp_fg = { 1, 0, 0, 0 };
-      gdk_gc_set_fill (tmp_gc, GDK_SOLID);
-      gdk_gc_set_foreground (tmp_gc, &tmp_fg);
-      gdk_draw_rectangle (tmp_mask, tmp_gc, TRUE, mask_x, mask_y, dest_width, dest_height);
-    }
-
-  /* tile pixmap, use generated mask */
-  tmp_gc = get_scratch_gc (window);
-  gdk_gc_set_ts_origin (tmp_gc, dest_x, dest_y);
-  gdk_gc_set_tile (tmp_gc, pixmap);
-  gdk_gc_set_clip_mask (tmp_gc, tmp_mask);
-  gdk_gc_set_clip_origin (tmp_gc, dest_x - mask_x, dest_y - mask_y);
-  gdk_draw_rectangle (window, tmp_gc, TRUE, rect.x, rect.y, rect.width, rect.height);
-
-  if (tmp_mask != mask)
-    g_object_unref (tmp_mask);
-}
-
 void
 sapwood_pixmap_get_pixmap (SapwoodPixmap *self, gint x, gint y,
 			   GdkPixmap **pixmap, GdkBitmap **pixmask)
